--- a/Frontend/conexion-solidaria-fe/.gitignore
+++ b/Frontend/conexion-solidaria-fe/.gitignore
@@ -1,21 +1,34 @@
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependencias
+node_modules/
+dist/
+dist-ssr/
+.cache/
+.out/
 *.local
 
-# Editor directories and files
+# Archivos de entorno
+.env
+.env.*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Archivos de compilación y temporales
+*.tsbuildinfo
+.nest-cli.json
+.eslintcache
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
